--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,7 +317,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right;
+  background: url("https://avatar-studio.ro/wp-content/uploads/2020/08/sedinta-foto-Sibiu-4.jpg") top right;
   background-size: cover;
   position: relative;
 }
