--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 a {
-  color: #olive;
+  color: #468e4e;
   text-decoration: none;
 }
 
@@ -43,7 +43,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #olive;
+  background: #468e4e;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -134,7 +134,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #olive;
+  color: #468e4e;
 }
 
 .navbar .dropdown ul {
@@ -173,7 +173,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #olive;
+  color: #468e4e;
 }
 
 .navbar .dropdown:hover>ul {
@@ -269,7 +269,7 @@ h6 {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #olive;
+  color: #468e4e;
 }
 
 .navbar-mobile .getstarted,
@@ -304,7 +304,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #olive;
+  color: #468e4e;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -372,7 +372,7 @@ h6 {
 }
 
 #hero .btn-scroll:hover {
-  color: #olive;
+  color: #468e4e;
 }
 
 @media (min-width: 1024px) {
@@ -550,7 +550,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #olive;
+  color: #468e4e;
   line-height: 0;
 }
 
@@ -565,7 +565,7 @@ section {
 .about .content .count-box i {
   display: block;
   font-size: 36px;
-  color: #olive;
+  color: #468e4e;
   float: left;
   line-height: 0;
 }
@@ -641,7 +641,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #olive;
+  background-color: #468e4e;
 }
 
 /*--------------------------------------------------------------
@@ -667,7 +667,7 @@ section {
   font-size: 16px;
   font-weight: 700;
   text-transform: uppercase;
-  color: #olive;
+  color: #468e4e;
   margin-bottom: 10px;
 }
 
@@ -732,7 +732,7 @@ section {
 .services .icon i {
   font-size: 36px;
   line-height: 1;
-  color: #olive;
+  color: #468e4e;
 }
 
 .services .title {
@@ -753,11 +753,11 @@ section {
 }
 
 .services .icon-box:hover {
-  border-color: #olive;
+  border-color: #468e4e;
 }
 
 .services .icon-box:hover .title a {
-  color: #olive;
+  color: #468e4e;
 }
 
 /*--------------------------------------------------------------
@@ -853,7 +853,7 @@ section {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #olive;
+  background-color: #468e4e;
 }
 
 @media (min-width: 992px) {
@@ -887,7 +887,7 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: #f3a200;
-  border-color: #olive;
+  border-color: #468e4e;
 }
 
 .portfolio .portfolio-item {
@@ -976,11 +976,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #olive;
+  border: 1px solid #468e4e;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #olive;
+  background-color: #468e4e;
 }
 
 .portfolio-details .portfolio-info {
@@ -1045,7 +1045,7 @@ section {
 
 .pricing h4 {
   font-size: 36px;
-  color: #olive;
+  color: #468e4e;
   font-weight: 600;
   font-family: "Open Sans", sans-serif;
   margin-bottom: 20px;
@@ -1077,7 +1077,7 @@ section {
 }
 
 .pricing ul i {
-  color: #olive;
+  color: #468e4e;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1095,7 +1095,7 @@ section {
 }
 
 .pricing .btn-buy {
-  background: #olive;
+  background: #468e4e;
   display: inline-block;
   padding: 8px 35px;
   border-radius: 4px;
@@ -1114,7 +1114,7 @@ section {
 
 .pricing .featured h3 {
   color: #fff;
-  background: #olive;
+  background: #468e4e;
 }
 
 .pricing .advanced {
@@ -1126,7 +1126,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #olive;
+  background: #468e4e;
   color: #fff;
 }
 
@@ -1142,7 +1142,7 @@ section {
 
 .contact .info-box i.bx {
   font-size: 24px;
-  color: #olive;
+  color: #468e4e;
   border-radius: 50%;
   padding: 15px;
   background: #fff6e4;
@@ -1182,8 +1182,8 @@ section {
 
 .contact .social-links a:hover {
   color: #fff;
-  border-color: #olive;
-  background: #olive;
+  border-color: #468e4e;
+  background: #468e4e;
 }
 
 .contact .php-email-form {
@@ -1249,7 +1249,7 @@ section {
 
 .contact .php-email-form input::focus,
 .contact .php-email-form textarea::focus {
-  background-color: #olive;
+  background-color: #468e4e;
 }
 
 .contact .php-email-form input {
@@ -1261,7 +1261,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #olive;
+  background: #468e4e;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1334,7 +1334,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #olive;
+  background: #468e4e;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
